test/parse/expr/bad-const-f32-trailing.txt
;;; ERROR: 1
(module (func (f32.const 1234.5678foo)))
(;; STDERR ;;;
parse/expr/bad-const-f32-trailing.txt:2:26: unexpected token "1234.5678foo"
(module (func (f32.const 1234.5678foo)))
                         ^^^^^^^^^^^^
parse/expr/bad-const-f32-trailing.txt:2:38: syntax error, unexpected ), expecting INT or FLOAT
(module (func (f32.const 1234.5678foo)))
                                     ^
;;; STDERR ;;)
